--- a/style.css
+++ b/style.css
@@ -2,10 +2,9 @@ body {background-color:black;font-family:arial;color:white}
 h1{color:grey;font-family:veranda}
 .maindiv {
     background-color: white;
-    font: black;
+    color: black;
     width: 300px;
     padding: 20px;
     border-radius: 25px;
     align-items: center;
 }
-
